--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
+    "multer": "^1.4.5-lts.2",
     "next": "15.2.4",
+    "path": "^0.12.7",
     "pg": "^8.14.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
