--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "multer": "^1.4.5-lts.2",
     "next": "15.2.4",
     "path": "^0.12.7",
+    "path-to-regexp": "^8.2.0",
     "pg": "^8.14.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
