--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "migrate": "node-pg-migrate",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
@@ -11,8 +12,10 @@
   "dependencies": {
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
+    "migrate": "^2.1.0",
     "multer": "^1.4.5-lts.2",
     "next": "15.2.4",
+    "node-pg-migrate": "^7.9.1",
     "path": "^0.12.7",
     "path-to-regexp": "^8.2.0",
     "pg": "^8.14.1",
