--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "migrate": "^2.1.0",
     "multer": "^1.4.5-lts.2",
     "next": "15.2.4",
