--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-select": "^2.2.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.501.0",
     "migrate": "^2.1.0",
     "multer": "^1.4.5-lts.2",
     "next": "15.2.4",
@@ -21,7 +25,8 @@
     "path-to-regexp": "^8.2.0",
     "pg": "^8.14.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "tailwind-merge": "^3.2.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
