--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-resizable-panels": "^3.0.1",
     "tailwind-merge": "^3.2.0",
     "tw-animate-css": "^1.2.7"
   },
