--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@radix-ui/react-progress": "^1.1.4",
     "@radix-ui/react-select": "^2.2.2",
     "@radix-ui/react-slot": "^1.2.0",
+    "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "embla-carousel-react": "^8.6.0",
     "express": "^5.1.0",
