--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "pg": "^8.14.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-resizable-panels": "^3.0.1",
     "tailwind-merge": "^3.2.0",
